--- a/cascaded-grid-animation.html
+++ b/cascaded-grid-animation.html
@@ -43,6 +43,10 @@ Usage:
       }
 
     });
+
+
+@homepage https://spahi4.github.io/cascaded-grid-animation/components/cascaded-grid-animation/
+@demo demo/index.html
 ```
 -->
 
